clusters/cloudydad/apps/karakeep/app/karakeep-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: karakeep
  labels:
    goldilocks.fairwinds.com/enabled: 'true'
