clusters/cloudydad/apps/karakeep/app/meilisearch-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
        - env:
            - name: MEILI_NO_ANALYTICS
              value: "true"
          image: getmeili/meilisearch:v1.11.1
          name: meilisearch
          resources:
            requests:
              cpu: 10m
              memory: 512Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - mountPath: /meili_data
              name: meilisearch
      volumes:
        - name: meilisearch
          persistentVolumeClaim:
            claimName: meilisearch-pvc
