clusters/cloudydad/apps/karakeep/app/karakeep-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: karakeep-web
  type: LoadBalancer
